--- a/Antidote/en.lproj/Localizable.strings
+++ b/Antidote/en.lproj/Localizable.strings
@@ -173,6 +173,10 @@
 "chat_missed_call_message" = "Missed call";
 /* Item present in the menu on long press on message */
 "chat_more_menu_item" = "More";
+/* Message shown on chat list when contact is typing */
+"chat_is_typing_text" = "is typing...";
+/* Text shown in chat when there are undelivered faux offline messages */
+"chat_pending_faux_offline_messages" = "Undelivered messages will be send when both you and friend are online.";
 
 /* Status message */
 "status_offline" = "Offline";
