default translation strings

--- a/Antidote/pt.lproj/Localizable.strings
+++ b/Antidote/pt.lproj/Localizable.strings
@@ -413,3 +413,13 @@
 "chat_is_typing_text" = "está a digitar...";
 /* Text shown in chat when there are undelivered faux offline messages */
 "chat_pending_faux_offline_messages" = "Mensagens não entregues serão enviadas quando você e o amigo estiverem online.";
+
+/* Settings screen menu */
+"settings_pushnotifications" = "Enable Push Notifications";
+/* Settings screen menu */
+"settings_notifications_description" = "When the application goes to the background, you will still receive notifications up to 10 minutes.";
+/* Settings screen menu */
+"settings_background_info" = "When the application goes to the background, you will only receive notifications if you have Push Notifications enabled.";
+/* Settings screen menu */
+"settings_pushmessages_info" = "If you disable Push Notifications then you and your friends will not receive any messages. The application will not work porperly. Push Notification uses Apple APS or Google FCM or Unified Push (GotifyUP)";
+
