--- a/Antidote/nb-NO.lproj/Localizable.strings
+++ b/Antidote/nb-NO.lproj/Localizable.strings
@@ -396,3 +396,13 @@
 "theme_error_cannot_open" = "Kan ikke åpne drakt. Feil format.";
 /* Avatar button label in settings */
 "accessibility_avatar_button_label" = "Avatar";
+
+/* Settings screen menu */
+"settings_pushnotifications" = "Enable Push Notifications";
+/* Settings screen menu */
+"settings_notifications_description" = "When the application goes to the background, you will still receive notifications up to 10 minutes.";
+/* Settings screen menu */
+"settings_background_info" = "When the application goes to the background, you will only receive notifications if you have Push Notifications enabled.";
+/* Settings screen menu */
+"settings_pushmessages_info" = "If you disable Push Notifications then you and your friends will not receive any messages. The application will not work porperly. Push Notification uses Apple APS or Google FCM or Unified Push (GotifyUP)";
+
